fixing margin-top in HomePage on mobile

--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -40,7 +40,7 @@
     }
 
     .p-home .main-text, .p-home .logo-img{
-        margin:auto;
+        margin: 0 auto;
         text-align: center;
     }
        
